0.2.2 ()
=====
* Added Element.duration.
* Added Message.End_of_stream.

0.2.1 (2015-08-03)
=====
* Dummy github release.

0.2.0 (2013-02-19)
=====
* Complete rewrite to get rid of OCamlIDL, lots of modules added.

0.1.0 (2011-10-04)
=====
* Initial release.